[gd_scene load_steps=22 format=3 uid="uid://doc72x1p3vtjh"]

[ext_resource type="Script" path="res://asset/script/Player.gd" id="1_xwfgt"]
[ext_resource type="Texture2D" uid="uid://cgkgjhytr4av" path="res://asset/character/character sheets.png" id="2_5ys2e"]
[ext_resource type="Texture2D" uid="uid://fs7vlsxryooy" path="res://asset/character/kunci.png" id="3_c2oa6"]
[ext_resource type="AudioStream" uid="uid://c61s5ypqv58yp" path="res://asset/audio/old-fashioned-clock-sound-37729.mp3" id="4_5i2qd"]
[ext_resource type="AudioStream" uid="uid://c3dsonhsohhm6" path="res://asset/audio/Walking.mp3" id="5_280ra"]
[ext_resource type="AudioStream" uid="uid://cfuf0iunm0fpl" path="res://asset/audio/jump.wav" id="6_a87wh"]
[ext_resource type="AudioStream" uid="uid://bcoy2sny7dral" path="res://asset/audio/Hit.wav" id="7_vthvg"]
[ext_resource type="AudioStream" uid="uid://b8es3j466rakw" path="res://asset/audio/explosion.wav" id="8_skpmu"]
[ext_resource type="Script" path="res://asset/script/CountdownTimer.gd" id="9_aar3j"]
[ext_resource type="FontFile" uid="uid://bk6bl7347k05a" path="res://asset/font/easvhs.ttf" id="9_n3hrl"]

[sub_resource type="Animation" id="Animation_dlw48"]
resource_name = "Dead"
length = 4.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [63, 64, 65, 66, 67, 68, 69, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("KeySprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2(-6, 2), Vector2(-7, 2), Vector2(-7, 1), Vector2(-6, 1), Vector2(-6, 2), Vector2(-6, 5), Vector2(-6, 9)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("KeySprite:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(4),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"respawn"
}]
}
tracks/4/type = "method"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Explosion")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(1.6),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [0.0],
"method": &"play"
}]
}

[sub_resource type="Animation" id="Animation_ekfs6"]
resource_name = "Idle"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("KeySprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2(-6, 2), Vector2(-6, 3)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("KeySprite:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_p4fmo"]
resource_name = "Jump"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [21]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("KeySprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2(-6, 2)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("KeySprite:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_ma8jq"]
resource_name = "PreJump"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [21, 22, 23, 24, 25, 26]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("KeySprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2(-6, 2), Vector2(-6, 3), Vector2(-6, 4), Vector2(-6, 6), Vector2(-6, 7), Vector2(-6, 8)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("KeySprite:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"values": [{
"args": [0.2],
"method": &"set_jump_power"
}, {
"args": [0.4],
"method": &"set_jump_power"
}, {
"args": [0.6],
"method": &"set_jump_power"
}, {
"args": [0.8],
"method": &"set_jump_power"
}, {
"args": [1.0],
"method": &"set_jump_power"
}]
}

[sub_resource type="Animation" id="Animation_s3g1k"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("KeySprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2(-6, 2)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("KeySprite:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [1.0],
"method": &"set_jump_power"
}]
}

[sub_resource type="Animation" id="Animation_x07wi"]
resource_name = "Walk"
length = 0.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [42, 43, 44]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("KeySprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Vector2(-6, 2), Vector2(-6, 3), Vector2(-6, 2)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("KeySprite:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Step")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.1, 0.3),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [0.0],
"method": &"play"
}, {
"args": [0.0],
"method": &"play"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ohfx1"]
_data = {
"Dead": SubResource("Animation_dlw48"),
"Idle": SubResource("Animation_ekfs6"),
"Jump": SubResource("Animation_p4fmo"),
"PreJump": SubResource("Animation_ma8jq"),
"RESET": SubResource("Animation_s3g1k"),
"Walk": SubResource("Animation_x07wi")
}

[sub_resource type="Animation" id="Animation_e68pw"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("KeySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_odvoh"]
resource_name = "Spin"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("KeySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gpyco"]
_data = {
"RESET": SubResource("Animation_e68pw"),
"Spin": SubResource("Animation_odvoh")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_0ukdx"]
radius = 5.0
height = 22.0

[node name="Player" type="CharacterBody2D"]
visibility_layer = 3
collision_layer = 3
script = ExtResource("1_xwfgt")
JUMP_VELOCITY = -500.0

[node name="BodySprite" type="Sprite2D" parent="."]
texture = ExtResource("2_5ys2e")
hframes = 21
vframes = 4

[node name="KeySprite" type="Sprite2D" parent="."]
visible = false
position = Vector2(-6, 2)
texture = ExtResource("3_c2oa6")
hframes = 5

[node name="BodyAnimation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ohfx1")
}

[node name="KeyAnimation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_gpyco")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 4)
shape = SubResource("CapsuleShape2D_0ukdx")

[node name="BombTimer" type="Timer" parent="."]
wait_time = 300.0
one_shot = true

[node name="Clock" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_5i2qd")
autoplay = true

[node name="Step" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_280ra")
volume_db = 5.0

[node name="Jump" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_a87wh")
volume_db = 15.0
pitch_scale = 0.7

[node name="Hit" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_vthvg")
volume_db = 15.0

[node name="Explosion" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_skpmu")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="CountdownTimer" type="Label" parent="CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_top = 10.0
offset_right = 20.0
offset_bottom = 33.0
grow_horizontal = 2
size_flags_vertical = 0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("9_n3hrl")
text = "300"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("9_aar3j")
total_time = 300
countdown = 300

[node name="Timer" type="Timer" parent="CanvasLayer/CountdownTimer"]

[connection signal="timeout" from="BombTimer" to="." method="_on_bomb_timer_timeout"]
[connection signal="timeout" from="CanvasLayer/CountdownTimer/Timer" to="CanvasLayer/CountdownTimer" method="_on_timer_timeout"]
